Updated insert_pois.py, updated error handling methods (90%)
